# fastapi-postgres-template

./: pyproject.toml
server/: logging.yml
server/common/: dependencies.py  logger.py  settings.py
