[tool.poetry]
name = "fastapi-postgres-template"
version = "0.1.0"
description = ""
authors = ["Cam <yulinfeng000@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_postgres_template"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.88.0"}
sqlalchemy = {extras = ["mypy"], version = "^1.4.45"}
asyncpg = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
